<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">

    <Button
        android:id="@+id/button_peach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_peach"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_banana"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_grapes" />

    <Button
        android:id="@+id/button_watermelon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_watermelon"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_pineapple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_grapes"
        app:layout_constraintTop_toBottomOf="@+id/button_banana" />

    <Button
        android:id="@+id/button_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_lemon"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_banana"
        app:layout_constraintTop_toBottomOf="@+id/button_pineapple" />

    <Button
        android:id="@+id/button_grapes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_grapes"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_peach"
        app:layout_constraintEnd_toStartOf="@+id/button_banana"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_apple" />

    <Button
        android:id="@+id/button_banana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_banana"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_watermelon"
        app:layout_constraintEnd_toStartOf="@+id/button_pineapple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_grapes"
        app:layout_constraintTop_toBottomOf="@+id/button_orange" />

    <Button
        android:id="@+id/button_pineapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_pineapple"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_lemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_banana"
        app:layout_constraintTop_toBottomOf="@+id/button_pear" />

    <Button
        android:id="@+id/button_pear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_pear"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_pineapple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_orange"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_orange"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_banana"
        app:layout_constraintEnd_toStartOf="@+id/button_pear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_apple"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_primary"
        android:onClick="updateList"
        android:text="@string/list_apple"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_grapes"
        app:layout_constraintEnd_toStartOf="@+id/button_orange"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>